phase2_Dev/src/objects/Allegation__c.object
<CustomObject>
    <description>Allegation associated with Complaints / Incidents</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of allegations</description>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Allegation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Allegations</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Allegations</label>
    </listViews>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allegations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>